--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@gluestack-ui/themed": "^1.1.34",
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
